--- a/.gitignore
+++ b/.gitignore
@@ -33,7 +33,7 @@ xcuserdata
 # you should judge for yourself, the pros and cons are mentioned at:
 # http://guides.cocoapods.org/using/using-cocoapods.html#should-i-ignore-the-pods-directory-in-source-control
 #
-# Pods/
+Pods/
 
 # Carthage
 #
@@ -42,6 +42,5 @@ xcuserdata
 
 Carthage/Build
 
-GDAXSwift/Pods/
 
 *.xcworkspacedata
